tests/negative/test_func_conflict.orb
fnc foo(x:i32) () {};
fnc foo(x:i32) i32 { ret 0; };

fnc main() () {};